--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     def paging_version = "3.1.1"
     implementation "androidx.paging:paging-guava:$paging_version"
     implementation "androidx.paging:paging-runtime:$paging_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
 }
